--- a/visit.html
+++ b/visit.html
@@ -79,6 +79,13 @@
       </nav>
     </header>
     <main>
+      <div class="cover">
+        <img
+          src="assets/images/scott-webb-102825.jpg"
+          alt="Colourful front of muesum"
+          class="cropped-image"
+        />
+      </div>
       <div class="page-container">
         <div class="info-box">
           <h2>Plan your visit</h2>
