img updates and placement

--- a/index.html
+++ b/index.html
@@ -22,15 +22,10 @@
     <header>
       <div class="desktop-nav">
         <nav>
-          <div class="logo-space">
-            <a href="index.html">
-              <div class="logo">
-                <img
-                  src="assets/png/Desktop logo Ai High.png"
-                  alt="logo"
-                /></div
-            ></a>
-          </div>
+          <a href="index.html">
+            <div class="logo">
+              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+          ></a>
 
           <div class="nav-items">
             <div class="top-row">
@@ -83,8 +78,8 @@
     <main>
       <div class="cover">
         <img
-          src="assets/images/scott-webb-102825.jpg"
-          alt="Colourful front of muesum"
+          src="assets/images/museum.jpg"
+          alt="Colourful front of museum"
           class="cropped-image"
         />
       </div>
@@ -97,7 +92,7 @@
 
         <div class="event-img">
           <img
-            src="assets/images/scientific-2040795_1280.jpg"
+            src="assets/images/scientific.jpg"
             alt="Professor inspecting a spaceshuttle"
             class="event-cropped-img"
           />
@@ -121,28 +116,28 @@
           <div class="grid-container">
             <div class="img1">
               <img
-                src="assets/images/billetto-editorial-334686.jpg"
+                src="assets/images/VR-painting.jpg"
                 alt="Boy using VR/glasses"
                 class="img"
               />
             </div>
             <div class="img2">
               <img
-                src="assets/images/heart-2607178_1920.jpg"
+                src="assets/images/heart.jpg"
                 alt="Heart display"
                 class="img"
               />
             </div>
             <div class="img3">
               <img
-                src="assets/images/andrew-ruiz-348421.jpg"
+                src="assets/images/andrew-ruiz.jpg"
                 alt="Astronaut"
                 class="img"
               />
             </div>
             <div class="img4">
               <img
-                src="assets/images/mammoth-1257288_1920.jpg"
+                src="assets/images/mammoth.jpg"
                 alt="Mammoth Skeleton"
                 class="img"
               />
@@ -176,11 +171,14 @@
           <div class="club">
             <div class="club-box">
               <img
-                src="assets/images/reading-2762010_1280.jpg"
+                src="assets/images/child-reading.jpg"
                 alt="Little boy reading book."
               />
             </div>
-            <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
+            <a href="groups.html" class="club-box club-enter">
+              <h2>Young Stars Club</h2></a
+            >
+            <div><h2>Young Stars Club</h2></div>
           </div>
         </div>
       </div>
