--- a/collections.html
+++ b/collections.html
@@ -40,7 +40,7 @@
             <div class="bottom-row">
               <a href="visit.html">Plan Visit</a>
               <a href="exhibitions.html">Exhibitions</a>
-              <a href="collections.html">Collectionst</a>
+              <a href="collections.html">Collections</a>
               <a href="tickets.html">Tickets</a>
             </div>
           </div>
@@ -67,7 +67,7 @@
                   />
                   <li><a href="visit.html">Plan Visit</a></li>
                   <li><a href="exhibitions.html">Exhibitions</a></li>
-                  <li><a href="collections.html">Collectionst</a></li>
+                  <li><a href="collections.html">Collections</a></li>
                   <li><a href="groups.html">Groups</a></li>
                   <li><a href="join.html"> Take part</a></li>
                   <li><a href="tickets.html">Tickets</a></li>
@@ -81,58 +81,71 @@
     <main>
       <div class="cover">
         <img
-          src="assets/images/scott-webb-102825.jpg"
-          alt="Colourful front of muesum"
+          src="assets/images/mammoth.jpg"
+          alt="Mammoth skelleton."
           class="cropped-image"
         />
       </div>
+
+
+
+
       <div class="page-container">
-        <div class="grid-container">
-          <div class="img1">
-            <img
-              src="assets/images/billetto-editorial-334686.jpg"
-              alt="Boy using VR/glasses"
-              class="img"
-            />
-          </div>
-          <div class="img2">
-            <img
-              src="assets/images/heart-2607178_1920.jpg"
-              alt="Heart display"
-              class="img"
-            />
-          </div>
-          <div class="img3">
-            <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Astronaut"
-              class="img"
-            />
-          </div>
-          <div class="img4">
-            <img
-              src="assets/images/mammoth-1257288_1920.jpg"
-              alt="Mammoth Skeleton"
-              class="img"
-            />
+        <h1 class="h-styling">Collections</h1>
+          <div class="grid-container">
+            <div class="img1">
+              <img
+                src="assets/images/VR-painting.jpg"
+                alt="Boy using VR-glasses to paint."
+                class="img"
+              />
+            </div>
+            <div class="img2">
+              <img
+                src="assets/images/heart.jpg"
+                alt="Anatomical model of a heart."
+                class="img"
+              />
+            </div>
+            <div class="img3">
+              <img
+                src="assets/images/andrew-ruiz.jpg"
+                alt="Astronaut in yellow suit."
+                class="img"
+              />
+            </div>
+            <div class="img4">
+              <img
+                src="assets/images/mammoth.jpg"
+                alt="Mammoth Skeleton"
+                class="img"
+              />
+            </div>
+
+            <a href="collections.html" class="link1">Robotics and AI</a>
+            <a href="collections.html" class="link2">Biology and Medicine</a>
+            <a href="collections.html" class="link3">Cosmology</a>
+            <a href="collections.html" class="link4">Evolution</a>
           </div>
 
-          <a href="collections.html" class="link1">Robotics and AI</a>
-          <a href="collections.html" class="link2">Biology and Medicine</a>
-          <a href="collections.html" class="link3">Cosmology</a>
-          <a href="collections.html" class="link4">Evolution</a>
-        </div>
+
+
+
+          <div class="info-box">
+            <h2 class="h-styling">Biology and Medicine</h2>
+          </div>
+
         <div class="cover">
           <div class="exhibition-img">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Professor inspecting a spaceshuttle"
+              src="assets/images/microscope.jpg"
+              alt="Man looking into a microscope."
               class="cropped-image"
             />
           </div>
         </div>
           <div class="info-box">
-            <h3>Biology and Medicine</h3>
+          
             <p>
               From micro-organisms to the human body, major breakthroughs in
               biology are offering us unique insights into the great wonders of
@@ -155,11 +168,13 @@
           <div class="club">
             <div class="club-box">
               <img
-                src="assets/images/reading-2762010_1280.jpg"
-                alt="Little boy reading book."
+                src="assets/images/vr-red.jpg"
+                alt="Boy with VR glasses on."
               />
             </div>
-            <div class="club-box club-enter"><h2>Young Stars Club</h2></div>
+            <a href="exhibitions.html" class="club-box club-enter">
+              <h2>Robotics and AI</h2></a
+            >
           </div>
         </div>
       </div>
