--- a/exhibitions.html
+++ b/exhibitions.html
@@ -82,28 +82,21 @@
       <div class="cover">
         <div class="exhibition-img">
           <img
-            src="assets/images/roberto-nickson-396152.jpg"
-            alt="Professor inspecting a spaceshuttle"
-            class="cropped-image"
+            src="assets/images/elephant-lobby.jpg"
+            alt="Life sized model of an elephant"
           />
         </div>
         <div class="enterexhibition">
-          <h1>Night in the Museum</h1>
+          <h1><a href="tickets.html">Night in the Museum</a></h1>
         </div>
       </div>
-
       <div class="page-container">
         <div class="info-box">
-          <a href="groups.html">
-            <h3 class="hovertextbutton">Young Stars Club</h3></a
-          >
-
           <p>
-            Come join us at the Community Science Museum where we’re committed
-            to making science accessible to all. Over the course of human
-            history, science has developed from our early understanding of fire,
-            wind, water, and earth to exploring everything from galaxies far
-            away to the very building blocks of life itself.
+            Night in the Museum Get your family together for an exciting night
+            in the museum as you sleep over beside dinosaurs and science
+            displays. Bring your own sleeping bag and get ready to rough it as
+            we go exploring the wonders of science.
           </p>
         </div>
       </div>
@@ -111,26 +104,27 @@
         <!-- without margin-->
         <div class="exhibition-img">
           <img
-            src="assets/images/celso-405219.jpg"
-            alt="Professor inspecting a spaceshuttle"
+            src="assets/images/eclipse.jpg"
+            alt="Solar eclipce shown stage by stage."
             class="cropped-image"
           />
         </div>
         <div class="enterexhibition">
-          <h1>Energetica</h1>
+          <h1><a href="exhibitions.html">Energetica</a></h1>
         </div>
       </div>
       <div class="cover">
         <div class="exhibition-img">
           <img
-            src="assets/images/andrew-ruiz-348421.jpg"
+            src="assets/images/andrew-ruiz.jpg"
             alt="Professor inspecting a spaceshuttle"
             class="cropped-image"
           />
         </div>
         <div class="enterexhibition">
-          <h1>Professor of Aeronautics</h1>
+          <h1><a href="exhibitions.html">Professor of Aeronautics</a></h1>
         </div>
+      </div>
       </div>
       <div class="page-container">
         <!--adn this one-->
@@ -146,32 +140,45 @@
         </div>
       </div>
       <div class="page-container">
+        <div class="info-box">
+          <a href="groups.html">
+            <h3 >Young Stars Club</h3></a
+          >
+
+          <p>
+            Come join us at the Community Science Museum where we’re committed
+            to making science accessible to all. Over the course of human
+            history, science has developed from our early understanding of fire,
+            wind, water, and earth to exploring everything from galaxies far
+            away to the very building blocks of life itself.
+          </p>
+        </div>
         <!-- check out this container-->
         <div class="grid-container">
           <div class="img1">
             <img
-              src="assets/images/billetto-editorial-334686.jpg"
+              src="assets/images/VR-painting.jpg"
               alt="Boy using VR/glasses"
               class="img"
             />
           </div>
           <div class="img2">
             <img
-              src="assets/images/heart-2607178_1920.jpg"
+              src="assets/images/heart.jpg"
               alt="Heart display"
               class="img"
             />
           </div>
           <div class="img3">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
+              src="assets/images/andrew-ruiz.jpg"
               alt="Astronaut"
               class="img"
             />
           </div>
           <div class="img4">
             <img
-              src="assets/images/mammoth-1257288_1920.jpg"
+              src="assets/images/mammoth.jpg"
               alt="Mammoth Skeleton"
               class="img"
             />
