ticket form aligning

--- a/groups.html
+++ b/groups.html
@@ -81,8 +81,8 @@
     <main>
       <div class="cover">
         <img
-          src="assets/images/scott-webb-102825.jpg"
-          alt="Colourful front of muesum"
+          src="assets/images/Playful-lobby.jpg"
+          alt="Lobby with colourful displays of space-shuttles and sculptures."
           class="cropped-image"
         />
       </div>
@@ -90,8 +90,8 @@
         <div class="cover">
           <div class="exhibition-img">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Professor inspecting a spaceshuttle"
+              src="assets/images/bead-maze.jpg"
+              alt="Child pacing the bead around the bead-maze."
               class="cropped-image"
             />
           </div>
@@ -117,8 +117,8 @@
         <div class="cover">
           <div class="exhibition-img">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Professor inspecting a spaceshuttle"
+              src="assets/images/chalk-board.jpg"
+              alt="A little girl studying a scientific chalk board."
               class="cropped-image"
             />
           </div>
@@ -142,8 +142,8 @@
         <div class="cover">
           <div class="exhibition-img">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Professor inspecting a spaceshuttle"
+              src="assets/images/microscope.jpg"
+              alt="Man looking into a microscope."
               class="cropped-image"
             />
           </div>
