--- a/join.html
+++ b/join.html
@@ -81,8 +81,8 @@
     <main>
       <div class="cover">
         <img
-          src="assets/images/scott-webb-102825.jpg"
-          alt="Colourful front of muesum"
+          src="assets/images/connect-sculpture.jpg"
+          alt="Connecting sculpture."
           class="cropped-image"
         />
       </div>
@@ -90,8 +90,8 @@
         <div class="cover">
           <div class="exhibition-img">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Professor inspecting a spaceshuttle"
+              src="assets/images/library.jpg"
+              alt="Man walking up into the museum's large library."
               class="cropped-image"
             />
           </div>
@@ -116,8 +116,8 @@
         <div class="cover">
           <div class="exhibition-img">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Professor inspecting a spaceshuttle"
+              src="assets/images/man-view.jpg"
+              alt="Elderly man looking down over the museum's lobby."
               class="cropped-image"
             />
           </div>
@@ -140,8 +140,8 @@
         <div class="cover">
           <div class="exhibition-img">
             <img
-              src="assets/images/andrew-ruiz-348421.jpg"
-              alt="Professor inspecting a spaceshuttle"
+              src="assets/images/display-room.jpg"
+              alt="Display room for collections in the museum."
               class="cropped-image"
             />
           </div>
