--- a/tickets.html
+++ b/tickets.html
@@ -80,8 +80,13 @@
       </nav>
     </header>
     <main>
-      <div class="form-position">
-        <form id="ticket-form">
+      <main>
+
+        <div class="page-container">
+   
+      
+        
+        <form id="ticket-form"><div class="form-box">
           <div class="form-container">
             <div class="img1">
               <input type="radio" id="free" name="ticket-type" value="free" />
@@ -183,9 +188,11 @@
                 >
               </div>
             </div>
-          </div>
+          </div></div>
         </form>
-      </div>
+ 
+
+    </div>
     </main>
     <footer>v</footer>
   </body>
