--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,7 @@
             <div class="bottom-row">
               <a href="visit.html">Plan Visit</a>
               <a href="exhibitions.html">Exhibitions</a>
-              <a href="collections.html">Collectionst</a>
+              <a href="collections.html">Collections</a>
               <a href="tickets.html">Tickets</a>
             </div>
           </div>
@@ -67,7 +67,7 @@
                   />
                   <li><a href="visit.html">Plan Visit</a></li>
                   <li><a href="exhibitions.html">Exhibitions</a></li>
-                  <li><a href="collections.html">Collectionst</a></li>
+                  <li><a href="collections.html">Collections</a></li>
                   <li><a href="groups.html">Groups</a></li>
                   <li><a href="join.html"> Take part</a></li>
                   <li><a href="tickets.html">Tickets</a></li>
