--- a/tickets.html
+++ b/tickets.html
@@ -41,7 +41,7 @@
             <div class="bottom-row">
               <a href="visit.html">Plan Visit</a>
               <a href="exhibitions.html">Exhibitions</a>
-              <a href="collections.html">Collectionst</a>
+              <a href="collections.html">Collections</a>
               <a href="tickets.html">Tickets</a>
             </div>
           </div>
@@ -68,7 +68,7 @@
                   />
                   <li><a href="visit.html">Plan Visit</a></li>
                   <li><a href="exhibitions.html">Exhibitions</a></li>
-                  <li><a href="collections.html">Collectionst</a></li>
+                  <li><a href="collections.html">Collections</a></li>
                   <li><a href="groups.html">Groups</a></li>
                   <li><a href="join.html"> Take part</a></li>
                   <li><a href="tickets.html">Tickets</a></li>
@@ -81,7 +81,17 @@
     </header>
     <main>
       <main>
-
+        <div class="cover">
+          <div class="exhibition-img">
+            <img
+              src="assets/images/andrew-ruiz.jpg"
+              alt="Professor inspecting a spaceshuttle"
+              class="cropped-image"
+            />
+          </div>
+          <div class="enterexhibition">
+            <h1><a href="exhibitions.html">Professor of Aeronautics</a></h1>
+          </div>
         <div class="page-container">
    
       
