--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="bottom-row">
               <a href="visit.html">Plan Visit</a>
               <a href="exhibitions.html">Exhibitions</a>
-              <a href="collections.html">Collectionst</a>
+              <a href="collections.html">Collections</a>
               <a href="tickets.html">Tickets</a>
             </div>
           </div>
@@ -63,7 +63,7 @@
                   />
                   <li><a href="visit.html">Plan Visit</a></li>
                   <li><a href="exhibitions.html">Exhibitions</a></li>
-                  <li><a href="collections.html">Collectionst</a></li>
+                  <li><a href="collections.html">Collections</a></li>
                   <li><a href="groups.html">Groups</a></li>
                   <li><a href="join.html"> Take part</a></li>
                   <li><a href="tickets.html">Tickets</a></li>
@@ -184,7 +184,17 @@
     </main>
 
     <footer>
-      <p>contact us</p>
+      <footer>
+        <nav aria-label="Footer Navigation" class="nav-items flex-one">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#.html">Contact</a></li>
+            <li><a href="#.html">About</a></li>
+            <li><a href="#.html">FAQ</a></li>
+          </ul>
+        </nav>
+        <div class="flex-one">Copyright &copy;</div>
+      </footer>
     </footer>
   </body>
 </html>
