--- a/visit.html
+++ b/visit.html
@@ -40,7 +40,7 @@
             <div class="bottom-row">
               <a href="visit.html">Plan Visit</a>
               <a href="exhibitions.html">Exhibitions</a>
-              <a href="collections.html">Collectionst</a>
+              <a href="collections.html">Collections</a>
               <a href="tickets.html">Tickets</a>
             </div>
           </div>
@@ -67,7 +67,7 @@
                   />
                   <li><a href="visit.html">Plan Visit</a></li>
                   <li><a href="exhibitions.html">Exhibitions</a></li>
-                  <li><a href="collections.html">Collectionst</a></li>
+                  <li><a href="collections.html">Collections</a></li>
                   <li><a href="groups.html">Groups</a></li>
                   <li><a href="join.html"> Take part</a></li>
                   <li><a href="tickets.html">Tickets</a></li>
@@ -81,7 +81,7 @@
     <main>
       <div class="cover">
         <img
-          src="assets/images/scott-webb-102825.jpg"
+          src="assets/images/museum.jpg"
           alt="Colourful front of muesum"
           class="cropped-image"
         />
@@ -110,7 +110,7 @@
           <!-- without margin-->
           <div class="map-img">
             <img
-              src="assets/images/Map Community Museum.png"
+              src="assets/images/Map.png"
               alt="Map of location for the community science museum"
             />
           </div>
