Description and title update

--- a/groups.html
+++ b/groups.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover a world of wonder and exploration at the Community Science Museum where young minds and families embark on a journey of curiosity and discovery. Immerse yourself in interactive exhibits, captivating experiments, and hands-on learning that sparks the imagination. Explore our vibrant and engaging website to ignite your love for science. Plan your visit today and unleash the scientist within."
+      content="Plan a visit with your group. Exclusive content for youth groups, teachers or researchers. All catered to your needs and curiosity."
     />
 
-    <title>Community Science Museum</title>
+    <title>Group events | Kids, teachers and researchers.</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
