--- a/collections.html
+++ b/collections.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover a world of wonder and exploration at the Community Science Museum where young minds and families embark on a journey of curiosity and discovery. Immerse yourself in interactive exhibits, captivating experiments, and hands-on learning that sparks the imagination. Explore our vibrant and engaging website to ignite your love for science. Plan your visit today and unleash the scientist within."
-    />
+      content="Discover all the different collection the museum has to offer. Everything from robotics, biology and medicine to spacetravel. "/>
 
-    <title>Community Science Museum</title>
+    <title>Collections of the museum. </title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
