--- a/tickets.html
+++ b/tickets.html
@@ -7,10 +7,10 @@
 
     <meta
       name="description"
-      content="Discover a world of wonder and exploration at the Community Science Museum where young minds and families embark on a journey of curiosity and discovery. Immerse yourself in interactive exhibits, captivating experiments, and hands-on learning that sparks the imagination. Explore our vibrant and engaging website to ignite your love for science. Plan your visit today and unleash the scientist within."
+      content="Book your tickets today and unleash the scientist within."
     />
 
-    <title>Community Science Museum</title>
+    <title>Tickets | Booking</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
