--- a/visit.html
+++ b/visit.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover a world of wonder and exploration at the Community Science Museum where young minds and families embark on a journey of curiosity and discovery. Immerse yourself in interactive exhibits, captivating experiments, and hands-on learning that sparks the imagination. Explore our vibrant and engaging website to ignite your love for science. Plan your visit today and unleash the scientist within."
+      content="Plan your visit today, the opening times and location. Find out how to get there and accessibility of the museum. Discover all that the museum has to offer. "
     />
 
-    <title>Community Science Museum</title>
+    <title>Plan your visit | Opening times | Location</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
