--- a/collections.html
+++ b/collections.html
@@ -9,7 +9,7 @@
       content="Discover all the different collection the museum has to offer. Everything from robotics, biology and medicine to spacetravel. "/>
 
     <title>Collections of the museum. </title>
-    <link href="assets/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
     <link rel="stylesheet" href="assets/css/tablet.css" />
