--- a/exhibitions.html
+++ b/exhibitions.html
@@ -10,7 +10,7 @@
     />
 
     <title>Exhibitions | Unique and interactive exhibitions.</title>
-    <link href="assets/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
     <link rel="stylesheet" href="assets/css/tablet.css" />
