--- a/tickets.html
+++ b/tickets.html
@@ -10,8 +10,8 @@
       content="Book your tickets today and unleash the scientist within."
     />
 
-    <title>Tickets | Booking</title>
-    <link href="assets/css/styles.css" rel="stylesheet" />
+    <title>Tickets |</title>
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/buttons.css" />
     <link rel="stylesheet" href="assets/css/tablet.css" />
