--- a/exhibitions.html
+++ b/exhibitions.html
@@ -117,7 +117,7 @@
         <div class="exhibition-img">
           <img
             src="assets/images/andrew-ruiz.jpg"
-            alt="Professor inspecting a spaceshuttle"
+            alt="Astronaut in yellow suit."
             class="cropped-image"
           />
         </div>
