--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
           />
         </div>
       </div>
-
+      <h1 class="h-styling">Explore together</h1>
       <div class="page-container">
         <div class="info-box">
-          <h3>Explore together</h3>
           <p>
             Come join us at the Community Science Museum where we’re committed
             to making science accessible to all. Over the course of human
