bad calue update

--- a/tickets.html
+++ b/tickets.html
@@ -26,7 +26,7 @@
             <a href="index.html">
               <div class="logo">
                 <img
-                  src="assets/png/Desktop logo Ai High.png"
+                  src="assets/png/Desktop-logo-Ai-High.png"
                   alt="logo"
                 /></div
             ></a>
@@ -51,7 +51,7 @@
         <div>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
           ></a>
         </div>
         <div class="menu-wrap">
