--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
           ></a>
 
           <div class="nav-items">
@@ -46,7 +46,7 @@
         <div>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
           ></a>
         </div>
         <div class="menu-wrap">
