--- a/join.html
+++ b/join.html
@@ -25,7 +25,7 @@
             <a href="index.html">
               <div class="logo">
                 <img
-                  src="assets/png/Desktop logo Ai High.png"
+                  src="assets/png/Desktop-logo-Ai-High.png"
                   alt="logo"
                 /></div
             ></a>
@@ -50,7 +50,7 @@
         <div>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop logo Ai High.png" alt="logo" /></div
+              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
           ></a>
         </div>
         <div class="menu-wrap">
