--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <nav>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
+              <img
+                src="assets/png/Desktop-logo-Ai-High.png"
+                alt="Museum logo."
+              /></div
           ></a>
 
           <div class="nav-items">
@@ -46,7 +49,10 @@
         <div>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
+              <img
+                src="assets/png/Desktop-logo-Ai-High.png"
+                alt="Museum logo."
+              /></div
           ></a>
         </div>
         <div class="menu-wrap">
