--- a/visit.html
+++ b/visit.html
@@ -87,8 +87,8 @@
         />
       </div>
       <div class="page-container">
+        <h1 class="h-styling">Plan your visit</h1>
         <div class="info-box">
-          <h2>Plan your visit</h2>
           <div class="box-paragraph">
             <div class="paragraph">
               <h3>Opening hours</h3>
