--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
           <div class="nav-items">
             <div class="top-row">
+              <label for="search-input">Search: </label>
               <input type="text" class="search-input" placeholder="Search..." />
               <a href="groups.html">Groups</a>
               <a href="join.html"> Take part</a>
