--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
           <div class="nav-items">
             <div class="top-row">
               <label for="search-input">Search: </label>
-              <input type="text" class="search-input" placeholder="Search..." />
+              <input
+                type="text"
+                id="search-input"
+                class="search-input"
+                placeholder="Search..."
+              />
               <a href="groups.html">Groups</a>
               <a href="join.html"> Take part</a>
             </div>
