--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
           ></a>
         </div>
         <div class="menu-wrap">
-          <input type="checkbox" class="toggler" />
+          <label for="checkbox">Search: </label>
+          <input type="checkbox" id="checkbox" class="toggler" />
           <div class="hamburger"><div></div></div>
           <div class="menu">
             <div>
               <div>
+                <label for="search-input">Search: </label>
                 <input
                   type="text"
+                  id="search-input"
                   class="search-input"
                   placeholder="Search..."
                 />
