--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           ></a>
         </div>
         <div class="menu-wrap">
-          <label for="checkbox">Search: </label>
+          <label for="checkbox">checkbox </label>
           <input type="checkbox" id="checkbox" class="toggler" />
           <div class="hamburger"><div></div></div>
           <div class="menu">
