label name update burger menu

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
           <div class="menu">
             <div>
               <div>
-                <label for="search-input">Search: </label>
+                <label for="search-hamburger">Search: </label>
                 <input
                   type="text"
-                  id="search-input"
+                  id="search-hamburger"
                   class="search-input"
                   placeholder="Search..."
                 />
