updated header on all

--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
           />
         </div>
       </div>
-      <h1 class="h-styling">Explore together</h1>
+
       <div class="page-container">
         <div class="info-box">
+          <h1 class="h-styling">Explore together</h1>
           <p>
             Come join us at the Community Science Museum where we’re committed
             to making science accessible to all. Over the course of human
@@ -164,7 +165,7 @@
           </div>
 
           <div class="info-box">
-            <h3>our aim</h3>
+            <h2 class="h-styling">our aim</h2>
             <p>
               The aim of our museum is to create a space where everyone can
               experience the wonders of our discoveries and perhaps even ignite
