--- a/visit.html
+++ b/visit.html
@@ -21,19 +21,23 @@
     <header>
       <div class="desktop-nav">
         <nav>
-          <div class="logo-space">
-            <a href="index.html">
-              <div class="logo">
-                <img
-                  src="assets/png/Desktop-logo-Ai-High.png"
-                  alt="logo"
-                /></div
-            ></a>
-          </div>
+          <a href="index.html">
+            <div class="logo">
+              <img
+                src="assets/png/Desktop-logo-Ai-High.png"
+                alt="Museum logo."
+              /></div
+          ></a>
 
           <div class="nav-items">
             <div class="top-row">
-              <input type="text" class="search-input" placeholder="Search..." />
+              <label for="search-input">Search: </label>
+              <input
+                type="text"
+                id="search-input"
+                class="search-input"
+                placeholder="Search..."
+              />
               <a href="groups.html">Groups</a>
               <a href="join.html"> Take part</a>
             </div>
@@ -50,21 +54,27 @@
         <div>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
+              <img
+                src="assets/png/Desktop-logo-Ai-High.png"
+                alt="Museum logo."
+              /></div
           ></a>
         </div>
         <div class="menu-wrap">
-          <input type="checkbox" class="toggler" />
+          <label for="checkbox">checkbox </label>
+          <input type="checkbox" id="checkbox" class="toggler" />
           <div class="hamburger"><div></div></div>
           <div class="menu">
             <div>
               <div>
+                <label for="search-hamburger">Search: </label>
+                <input
+                  type="text"
+                  id="search-hamburger"
+                  class="search-input"
+                  placeholder="Search..."
+                />
                 <ul>
-                  <input
-                    type="text"
-                    class="search-input"
-                    placeholder="Search..."
-                  />
                   <li><a href="visit.html">Plan Visit</a></li>
                   <li><a href="exhibitions.html">Exhibitions</a></li>
                   <li><a href="collections.html">Collections</a></li>
@@ -91,7 +101,7 @@
         <div class="info-box">
           <div class="box-paragraph">
             <div class="paragraph">
-              <h3>Opening hours</h3>
+              <h2 class="h-styling">Opening hours</h2>
               <p>Monday - Closed</p>
               <p>Tuesday-Thursday: 10:00 - 16:00</p>
 
@@ -101,7 +111,7 @@
             </div>
             <div class="paragraph">
               <a href="tickets.html" class="button">Tickets</a>
-              <h3>Location</h3>
+              <h2 class="h-styling">Location</h2>
               <p>Havnegata 13, 4306 Sandnes</p>
             </div>
           </div>
@@ -118,7 +128,7 @@
         <div class="info-box">
           <div class="box-paragraph">
             <div class="paragraph">
-              <h3>Admission</h3>
+              <h3 class="h-styling">Admission</h3>
               <p>
                 The entrance is free for all. There are guided tours of the
                 museum that leave every hour. These tours are 70 NOK per person
@@ -126,19 +136,19 @@
                 like to organise a guided tour for your group of 6 or more
                 people, please contact us to arrange the tour.
               </p>
-              <h3>Accessibility</h3>
+              <h3 class="h-styling">Accessibility</h3>
               <p>
                 The museum has wheelchair accessibility ramps. It also has audio
                 guides and braille display signs for the visually impaired.
               </p>
             </div>
             <div class="paragraph">
-              <h3>Food and drink</h3>
+              <h3 class="h-styling">Food and drink</h3>
               <p>
                 There is a café attached to the museum where you can get light
                 lunches, soft drinks, coffee, snacks and more.
               </p>
-              <h3>Shop</h3>
+              <h3 class="h-styling">Shop</h3>
               <p>
                 Our shop offers a range of memorabilia from the museum as well
                 as great gifts and activity packs that allow you to continue to
