--- a/collections.html
+++ b/collections.html
@@ -20,19 +20,23 @@
     <header>
       <div class="desktop-nav">
         <nav>
-          <div class="logo-space">
-            <a href="index.html">
-              <div class="logo">
-                <img
-                  src="assets/png/Desktop-logo-Ai-High.png"
-                  alt="logo"
-                /></div
-            ></a>
-          </div>
+          <a href="index.html">
+            <div class="logo">
+              <img
+                src="assets/png/Desktop-logo-Ai-High.png"
+                alt="Museum logo."
+              /></div
+          ></a>
 
           <div class="nav-items">
             <div class="top-row">
-              <input type="text" class="search-input" placeholder="Search..." />
+              <label for="search-input">Search: </label>
+              <input
+                type="text"
+                id="search-input"
+                class="search-input"
+                placeholder="Search..."
+              />
               <a href="groups.html">Groups</a>
               <a href="join.html"> Take part</a>
             </div>
@@ -49,21 +53,27 @@
         <div>
           <a href="index.html">
             <div class="logo">
-              <img src="assets/png/Desktop-logo-Ai-High.png" alt="logo" /></div
+              <img
+                src="assets/png/Desktop-logo-Ai-High.png"
+                alt="Museum logo."
+              /></div
           ></a>
         </div>
         <div class="menu-wrap">
-          <input type="checkbox" class="toggler" />
+          <label for="checkbox">checkbox </label>
+          <input type="checkbox" id="checkbox" class="toggler" />
           <div class="hamburger"><div></div></div>
           <div class="menu">
             <div>
               <div>
+                <label for="search-hamburger">Search: </label>
+                <input
+                  type="text"
+                  id="search-hamburger"
+                  class="search-input"
+                  placeholder="Search..."
+                />
                 <ul>
-                  <input
-                    type="text"
-                    class="search-input"
-                    placeholder="Search..."
-                  />
                   <li><a href="visit.html">Plan Visit</a></li>
                   <li><a href="exhibitions.html">Exhibitions</a></li>
                   <li><a href="collections.html">Collections</a></li>
