--- a/groups.html
+++ b/groups.html
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="info-box">
-          <h3>Kids</h3>
+          <h2 class="h-styling">Kids</h2>
           <p>
             Come on down to our museum, there’s plenty to see and do. You can
             learn about Newtonian physics from our bumper swing, or why not
@@ -137,7 +137,7 @@
           </div>
         </div>
         <div class="info-box">
-          <h3>For Teachers</h3>
+          <h2 class="h-styling">For Teachers</h2>
           <p>
             As a community-driven museum, we want to work with schools to create
             places of learning and exploring. Our team are on hand to give your
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="info-box">
-          <h3>Researchers</h3>
+          <h2 class="h-styling">Researchers</h>
           <p>
             Are you looking to get involved with our team of researchers and
             academics? Our museum offers various ways for you to use our
