--- a/join.html
+++ b/join.html
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="info-box">
-          <h3>Volunteer</h3>
+          <h2 class="h-styling">Volunteer</h2>
           <p>
             A number of people volunteer their time and effort to keep the
             displays in good order and ready for visitors to come and enjoy.
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="info-box">
-          <h3>Support</h3>
+          <h2 class="h-styling">Support</h2>
           <p>
             There are various ways you can support the museum. Donations are
             very welcome and are an important way we keep this museum open and
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="info-box">
-          <h3>Internships</h3>
+          <h2 class="h-styling">Internships</h2>
           <p>
             Are you interested in working in a museum? Do you enjoy the fun and
             excitement of sharing the wonders of nature with people? Well you
