fixing fieldset error

--- a/checkout.html
+++ b/checkout.html
@@ -88,5 +88,14 @@
         </div>
       </nav>
     </header>
+    <main>
+      <h1>Checkout success!</h1>
+      <div class="info-box">
+        <p>
+          Your booking was successful. Please enjoy your visit to the Community
+          Science Museum.
+        </p>
+      </div>
+    </main>
   </body>
 </html>
