--- a/groups.html
+++ b/groups.html
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="info-box">
-          <h2 class="h-styling">Researchers</h>
+          <h2 class="h-styling">Researchers</h2>
           <p>
             Are you looking to get involved with our team of researchers and
             academics? Our museum offers various ways for you to use our
