--- a/checkout.html
+++ b/checkout.html
@@ -89,7 +89,7 @@
       </nav>
     </header>
     <main>
-      <h1>Checkout success!</h1>
+      <h1 class="h-styling">Checkout success!</h1>
       <div class="info-box">
         <p>
           Your booking was successful. Please enjoy your visit to the Community
