--- a/exhibitions.html
+++ b/exhibitions.html
@@ -135,7 +135,7 @@
           <h1><a href="exhibitions.html">Professor of Aeronautics</a></h1>
         </div>
       </div>
-      </div>
+
       <div class="page-container">
         <!--adn this one-->
         <div class="info-box">
@@ -151,9 +151,7 @@
       </div>
       <div class="page-container">
         <div class="info-box">
-          <a href="groups.html">
-            <h3 >Young Stars Club</h3></a
-          >
+          <a href="groups.html"> <h3>Young Stars Club</h3></a>
 
           <p>
             Come join us at the Community Science Museum where we’re committed
