--- a/index.html
+++ b/index.html
@@ -133,29 +133,16 @@
               <img
                 src="assets/images/VR-painting.jpg"
                 alt="Boy using VR/glasses"
-                class="img"
               />
             </div>
             <div class="img2">
-              <img
-                src="assets/images/heart.jpg"
-                alt="Heart display"
-                class="img"
-              />
+              <img src="assets/images/heart.jpg" alt="Heart display" />
             </div>
             <div class="img3">
-              <img
-                src="assets/images/andrew-ruiz.jpg"
-                alt="Astronaut"
-                class="img"
-              />
+              <img src="assets/images/andrew-ruiz.jpg" alt="Astronaut" />
             </div>
             <div class="img4">
-              <img
-                src="assets/images/mammoth.jpg"
-                alt="Mammoth Skeleton"
-                class="img"
-              />
+              <img src="assets/images/mammoth.jpg" alt="Mammoth Skeleton" />
             </div>
 
             <a href="collections.html" class="link1">Robotics and AI</a>
