dry buitton styles

--- a/tickets.html
+++ b/tickets.html
@@ -12,8 +12,7 @@
 
     <title>Tickets |</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/buttons.css" />
+
     <link rel="stylesheet" href="assets/css/tablet.css" />
     <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
@@ -115,7 +114,7 @@
                     name="ticket-type"
                     value="free"
                   />
-                  <label for="free" class="ticket-option"
+                  <label for="free" class="ticket-option button-base"
                     >Museum Entrance</label
                   >
                 </div>
@@ -126,7 +125,7 @@
                     name="ticket-type"
                     value="exhibition1"
                   />
-                  <label for="exhibition1" class="ticket-option"
+                  <label for="exhibition1" class="ticket-option button-base"
                     >Night in the museum</label
                   >
                 </div>
@@ -137,7 +136,7 @@
                     name="ticket-type"
                     value="exhibition2"
                   />
-                  <label for="exhibition2" class="ticket-option"
+                  <label for="exhibition2" class="ticket-option button-base"
                     >Energetica Exhibition</label
                   >
                 </div>
@@ -148,7 +147,7 @@
                     name="ticket-type"
                     value="exhibition3"
                   />
-                  <label for="exhibition3" class="ticket-option"
+                  <label for="exhibition3" class="ticket-option button-base"
                     >Professor of Aeronautics</label
                   >
                 </div>
@@ -210,7 +209,7 @@
 
                 <div class="link5">
                   <div class="step" id="step-4">
-                    <a href="checkout.html" class="checkout-button"
+                    <a href="checkout.html" class="button button-base"
                       >Proceed to Checkout</a
                     >
                   </div>
