--- a/visit.html
+++ b/visit.html
@@ -11,8 +11,7 @@
 
     <title>Plan your visit | Opening times | Location</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/header.css" />
-    <link rel="stylesheet" href="assets/css/buttons.css" />
+
     <link rel="stylesheet" href="assets/css/tablet.css" />
     <link rel="stylesheet" href="assets/css/mobile.css" />
   </head>
@@ -111,7 +110,7 @@
               <p>Sunday: 09:00 - 13:00</p>
             </div>
             <div class="paragraph">
-              <a href="tickets.html" class="button">Tickets</a>
+              <a href="tickets.html" class="button button-base">Tickets</a>
               <h2 class="h-styling">Location</h2>
               <p>Havnegata 13, 4306 Sandnes</p>
             </div>
