--- a/exhibitions.html
+++ b/exhibitions.html
@@ -150,7 +150,9 @@
       </div>
       <div class="page-container">
         <div class="info-box">
-          <a href="groups.html"> <h3>Young Stars Club</h3></a>
+          <a href="groups.html">
+            <h3 class="button-base button">Young Stars Club</h3></a
+          >
 
           <p>
             Come join us at the Community Science Museum where we’re committed
