--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta
       name="description"
@@ -184,15 +184,17 @@
       </div>
     </main>
 
-    <footer>
-      <nav aria-label="Footer Navigation" class="nav-items flex-one">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#.html">Contact</a></li>
-          <li><a href="#.html">About</a></li>
-          <li><a href="#.html">FAQ</a></li>
-        </ul>
-      </nav>
+    <footer class="nav-items">
+      <div>
+        <nav aria-label="Footer Navigation" class="flex-one_">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#.html">Contact</a></li>
+            <li><a href="#.html">About</a></li>
+            <li><a href="#.html">FAQ</a></li>
+          </ul>
+        </nav>
+      </div>
       <div class="flex-one">Copyright &copy;</div>
     </footer>
   </body>
