--- a/collections.html
+++ b/collections.html
@@ -177,5 +177,18 @@
         </div>
       </div>
     </main>
+    <footer class="nav-items">
+      <div>
+        <nav aria-label="Footer Navigation" class="flex-one_">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#.html">Contact</a></li>
+            <li><a href="#.html">About</a></li>
+            <li><a href="#.html">FAQ</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="flex-one">Copyright &copy;</div>
+    </footer>
   </body>
 </html>
