--- a/visit.html
+++ b/visit.html
@@ -102,13 +102,14 @@
           <div class="box-paragraph">
             <div class="paragraph">
               <h2 class="h-styling">Opening hours</h2>
-              <p>Monday - Closed</p>
-              <p>Tuesday-Thursday: 10:00 - 16:00</p>
+              <dl>
+              <dt>Monday - Closed</dt>
+              <dt>Tuesday-Thursday: 10:00 - 16:00</dt>
 
-              <p>Friday: 10:00 - 19:00</p>
-              <p>Saturday: 09:00 - 16:00</p>
-              <p>Sunday: 09:00 - 13:00</p>
-            </div>
+              <dt>Friday: 10:00 - 19:00</dt>
+              <dt>Saturday: 09:00 - 16:00</dt>
+              <dt>Sunday: 09:00 - 13:00</dt>
+            </div></dl>
             <div class="paragraph">
               <a href="tickets.html" class="button button-base">Tickets</a>
               <h2 class="h-styling">Location</h2>
