--- a/visit.html
+++ b/visit.html
@@ -101,14 +101,15 @@
         <div class="info-box">
           <div class="box-paragraph">
             <div class="paragraph">
-              <h2 class="h-styling">Opening hours</h2>
+              
               <dl>
-              <dt>Monday - Closed</dt>
-              <dt>Tuesday-Thursday: 10:00 - 16:00</dt>
+                <dt><h2 class="h-styling">Opening hours</h2></dt>
+              <dd>Monday - Closed</dd>
+              <dd>Tuesday-Thursday: 10:00 - 16:00</dd>
 
-              <dt>Friday: 10:00 - 19:00</dt>
-              <dt>Saturday: 09:00 - 16:00</dt>
-              <dt>Sunday: 09:00 - 13:00</dt>
+              <dd>Friday: 10:00 - 19:00</dd>
+              <dd>Saturday: 09:00 - 16:00</dd>
+              <dd>Sunday: 09:00 - 13:00</dd>
             </div></dl>
             <div class="paragraph">
               <a href="tickets.html" class="button button-base">Tickets</a>
