--- a/visit.html
+++ b/visit.html
@@ -111,10 +111,14 @@
               <dd>Saturday: 09:00 - 16:00</dd>
               <dd>Sunday: 09:00 - 13:00</dd>
             </div></dl>
+            
             <div class="paragraph">
+              <dl><dt>
               <a href="tickets.html" class="button button-base">Tickets</a>
-              <h2 class="h-styling">Location</h2>
-              <p>Havnegata 13, 4306 Sandnes</p>
+            </dt>
+              <dt><h2 class="h-styling">Location</h2></dt>
+              <dd>Havnegata 13, 4306 Sandnes</dd>
+            </dl>
             </div>
           </div>
         </div>
