--- a/visit.html
+++ b/visit.html
@@ -101,24 +101,27 @@
         <div class="info-box">
           <div class="box-paragraph">
             <div class="paragraph">
-              
               <dl>
                 <dt><h2 class="h-styling">Opening hours</h2></dt>
-              <dd>Monday - Closed</dd>
-              <dd>Tuesday-Thursday: 10:00 - 16:00</dd>
+                <dd>Monday - Closed</dd>
+                <dd>Tuesday-Thursday: 10:00 - 16:00</dd>
 
-              <dd>Friday: 10:00 - 19:00</dd>
-              <dd>Saturday: 09:00 - 16:00</dd>
-              <dd>Sunday: 09:00 - 13:00</dd>
-            </div></dl>
-            
+                <dd>Friday: 10:00 - 19:00</dd>
+                <dd>Saturday: 09:00 - 16:00</dd>
+                <dd>Sunday: 09:00 - 13:00</dd>
+              </dl>
+            </div>
+
             <div class="paragraph">
-              <dl><dt>
-              <a href="tickets.html" class="button button-base">Tickets</a>
-            </dt>
-              <dt><h2 class="h-styling">Location</h2></dt>
-              <dd>Havnegata 13, 4306 Sandnes</dd>
-            </dl>
+              <dl class="space">
+                <dt>
+                  <a href="tickets.html" class="button button-base">Tickets</a>
+                </dt>
+              </dl>
+              <dl class="space">
+                <dt><h2 class="h-styling space">Location</h2></dt>
+                <dd>Havnegata 13, 4306 Sandnes</dd>
+              </dl>
             </div>
           </div>
         </div>
