--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover all the different collection the museum has to offer. Everything from robotics, biology and medicine to spacetravel. "
+      content="Check out Success | Enjoy your visit to the museum and exhibition of your choice."
     />
 
-    <title>Collections of the museum.</title>
+    <title>Check out Success | Enjoy your visit.</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <link rel="stylesheet" href="assets/css/tablet.css" />
@@ -88,93 +88,16 @@
       </nav>
     </header>
     <main>
-      <div class="cover">
-        <img
-          src="assets/images/mammoth.jpg"
-          alt="Mammoth skelleton."
-          class="cropped-image"
-        />
-      </div>
-
-      <div class="page-container">
-        <h1 class="h-styling">Collections</h1>
-        <div class="grid-container">
-          <div class="img1">
-            <img
-              src="assets/images/VR-painting.jpg"
-              alt="Boy using VR-glasses to paint."
-              class="img"
-            />
-          </div>
-          <div class="img2">
-            <img
-              src="assets/images/heart.jpg"
-              alt="Anatomical model of a heart."
-              class="img"
-            />
-          </div>
-          <div class="img3">
-            <img
-              src="assets/images/andrew-ruiz.jpg"
-              alt="Astronaut in yellow suit."
-              class="img"
-            />
-          </div>
-          <div class="img4">
-            <img
-              src="assets/images/mammoth.jpg"
-              alt="Mammoth Skeleton"
-              class="img"
-            />
-          </div>
-
-          <a href="collections.html" class="link1">Robotics and AI</a>
-          <a href="collections.html" class="link2">Biology and Medicine</a>
-          <a href="collections.html" class="link3">Cosmology</a>
-          <a href="collections.html" class="link4">Evolution</a>
-        </div>
-
-        <div class="info-box">
-          <h2 class="h-styling">Biology and Medicine</h2>
-        </div>
-
-        <div class="cover">
-          <div class="exhibition-img">
-            <img
-              src="assets/images/microscope.jpg"
-              alt="Man looking into a microscope."
-              class="cropped-image"
-            />
-          </div>
-        </div>
-        <div class="info-box">
-          <p>
-            From micro-organisms to the human body, major breakthroughs in
-            biology are offering us unique insights into the great wonders of
-            the tiny world.
-          </p>
-          <p>
-            For many people their life expectancy is much longer and their
-            quality of life much improved, thanks to the growth of our
-            understanding of medicine. Over a series of exhibits we explore the
-            history of medicine and take a look at some major breakthroughs
-            including the discovery of penicillin and the first heart
-            transplant.
-          </p>
-          <p>
-            Many of our great medicinal discoveries have come not only from the
-            lab, but also from observing animals in the wild. Often our fellow
-            creatures have beat us to it.
-          </p>
-        </div>
-        <div class="club">
-          <div class="club-box">
-            <img src="assets/images/vr-red.jpg" alt="Boy with VR glasses on." />
-          </div>
-          <a href="exhibitions.html" class="club-box club-enter">
-            <h2>Robotics and AI</h2></a
-          >
-        </div>
+      <h1 class="h-styling">Community Science Museum</h1>
+      <div class="info-box">
+        <p>
+          Discover a world of wonder and exploration at the Community Science
+          Museum where young minds and families embark on a journey of curiosity
+          and discovery. Immerse yourself in interactive exhibits, captivating
+          experiments, and hands-on learning that sparks the imagination.
+          Explore our vibrant and engaging website to ignite your love for
+          science. Plan your visit today and unleash the scientist within.
+        </p>
       </div>
     </main>
     <footer class="nav-items">
