--- a/visit.html
+++ b/visit.html
@@ -173,9 +173,9 @@
         <nav aria-label="Footer Navigation" class="flex-one_">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#.html">Contact</a></li>
-            <li><a href="#.html">About</a></li>
-            <li><a href="#.html">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="checkout.html">Your tickets</a></li>
           </ul>
         </nav>
       </div>
